--- a/client/src/components/post/PostComment/PostComment.scss
+++ b/client/src/components/post/PostComment/PostComment.scss
@@ -32,19 +32,22 @@
   &__text {
     flex: 1;
     font-size: 15px;
+    word-break: break-word;
+    hyphens: auto;
+    -ms-hyphens: auto;
   }
 
   &__content:hover &__delete {
-    visibility: visible;
+    opacity: 1;
   }
 
   &__delete {
-    visibility: hidden;
     position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(30%, -30%);
-    z-index: 199;
+    top: 7px;
+    right: 7px;
+    z-index: 499;
+    opacity: 0;
+    transition: opacity 150ms ease;
 
     &:disabled {
       cursor: auto;
