--- a/client/src/components/shared/CircleIcon/CircleIcon.scss
+++ b/client/src/components/shared/CircleIcon/CircleIcon.scss
@@ -1,7 +1,7 @@
 @import "../../../scss/partials/variables";
 
 .CircleIcon {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   width: 34px;
